testsuite/tests/typecheck/should_fail/TyAppPat_MisplacedApplication.stderr

TyAppPat_MisplacedApplication.hs:9:6: error: [GHC-07626]
    Parse error in pattern: MkT x
